# hwf-jupyterlab-telemetry

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: build.yml
binder/: environment.yml  postBuild
hwf-jupyterlab-telemetry/: __init__.py  handlers.py
hwf-jupyterlab-telemetry/eventsink/: __init__.py  caliper.py  console.py  eventsink.py
jupyter-config/: hwf-jupyterlab-telemetry.json
schema/: plugin.json  telemetry.json
src/: aws_api_gateway_handler.ts  events.ts  handler.ts  index.ts  settings_supplicant.ts  types.ts
