[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.0"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["hwf-jupyterlab-telemetry/labextension/static/style.js"]
ensured-targets = ["hwf-jupyterlab-telemetry/labextension/static/style.js", "hwf-jupyterlab-telemetry/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["hwf-jupyterlab-telemetry/labextension/**", "yarn.lock", ".*", "package-lock.json"]
